# usecode

./: .gitignore  .gitmodules  .golangci.yml  AGENTS.md  Makefile  README.md  go.mod  go.sum  nodemon.json
lib/actrt/: Makefile  README.md  pyproject.toml
lib/actrt/ansible_collections/evgnomon/catamaran/: README.md  galaxy.yml  requirements.yml
lib/actrt/ansible_collections/evgnomon/catamaran/plugins/modules/: gh_image.py  sign_cert.py
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_fb/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_fb/defaults/: main.yaml
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_fb/meta/: main.yaml
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_fb/templates/: fluent-bit.conf.j2
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_fb/vars/: main.yaml
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_no_ipv6/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_node_exporter/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_pod/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_prometheus/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ensure_volume/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/ingress_deployment/: COPYING  README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_add_shards/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_ca_deploy/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_defaults/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_facts/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_install/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_join/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_secrets/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_service/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_shell/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_sshadd/: README.md
lib/actrt/ansible_collections/evgnomon/catamaran/roles/z_tag_release/: README.md
lib/actrt/docs/source/: conf.py  index.rst
lib/actrt/playbooks/: main.yaml
lib/actrt/scripts/: publish-galaxy.sh  publish-pypi.sh
lib/actrt/tests/: test_main.py
lib/pylib/: Makefile  README.md  pyproject.toml
lib/pylib/docs/source/: conf.py  index.rst
lib/pylib/playbooks/: main.yaml
lib/pylib/scripts/: publish-galaxy.sh  publish-pypi.sh
lib/pylib/tests/: test_kit_foo.py  test_main.py
lib/pylib/usecode/: __init__.py
lib/pylib/usecode/kit/: cli.py  config.py  vault.py
lib/pylib/usecode/kit/commands/: __init__.py  vault.py
playbooks/: dev.yaml  main.yaml
scripts/: ci_wrapper.sh
(+432 files in other folders)
