[project]
name = "catamaran"
version = "0.2.19"
description = "GitOps scripts for yacht users"
authors = [
    { name = "Hamed Ghasemzadeh", email = "hg@evgnomon.org" }
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "typer>=0.12.5,<0.13",
    "pyyaml>=6.0.2,<7",
    "httpx>=0.27.2,<0.28",
    "docker>=7.1.0,<8",
    "ansible>=11.5.0,<12",
    "packaging>=25.0,<26",
]

[project.urls]
homepage = "https://github.com/evgnomon/catamaran"

[project.scripts]
catamaran = "catamaran:main"

[dependency-groups]
dev = [
    "mypy>=1.11.2,<2",
    "pytest>=8.3.3,<9",
    "sphinx>=8.0.2,<9",
    "poethepoet>=0.28.0,<0.29",
    "furo>=2024.8.6,<2025",
    "ruff>=0.6.4,<0.7",
    "types-pyyaml>=6.0.12.20240808,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.poe.tasks]
check = { shell = "ruff check . && mypy catamaran && pytest -s", help = "Run all checks (ruff, mypy, pytest)" }

[tool.poe.tasks.img_delete]
help = "Delete an image from Github registry"
shell = 'catamaran --token $(getsecret $(repofqn) | jq -r .github_pat) --username evgnomon --image-name ark --tag "$tag"'
[tool.poe.tasks.img_delete.args.tag]
options = ["-t", "--tag"]
help = "Tag of the image to delete"
