[project]
name = "usecode"
version = "0.2.22"
description = "GitOps scripts for yacht users"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Hamed Ghasemzadeh", email = "hg@evgnomon.org" }]
dependencies = [
  "ansible>=11.5.0,<12",
  "click>=8.0.0",
  "docker>=7.1.0,<8",
  "httpx>=0.27.2,<0.28",
  "packaging>=25.0,<26",
  "pydantic[email]>=2.0.0",
  "pyyaml>=6.0.2,<7",
  "typer>=0.12.5,<0.13",
]

[project.urls]
homepage = "https://github.com/evgnomon/usecode"

[project.scripts]
bp = "usecode.kit.cli:bp"

[dependency-groups]
dev = [
  "furo>=2024.8.6,<2025",
  "mypy>=1.11.2,<2",
  "poethepoet>=0.28.0,<0.29",
  "pytest>=8.3.3,<9",
  "ruff>=0.6.4,<0.7",
  "sphinx>=8.0.2,<9",
  "types-pyyaml>=6.0.12.20240808,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
check = { shell = "ruff check . && mypy usecode && pytest -s", help = "Run all checks (ruff, mypy, pytest)" }

[tool.poe.tasks.img_delete]
help = "Delete an image from Github registry"
shell = 'usecode --token $(getsecret $(repofqn) | jq -r .github_pat) --username evgnomon --image-name ark --tag "$tag"'

[tool.poe.tasks.img_delete.args.tag]
options = ["-t", "--tag"]
help = "Tag of the image to delete"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.uv]
package = true
